--- a/Finalproject_G_4/Web.config
+++ b/Finalproject_G_4/Web.config
@@ -4,9 +4,17 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+  <add name="Drivinglicense" 
+    connectionString="Data Source=DESKTOP-7485JE5\SQLEXPRESS;Initial Catalog=Final4;Integrated Security=True"
+    providerName="System.Data.SqlClient" />
+</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
+    </httpModules>
   </system.web>
   <system.codedom>
     <compilers>
@@ -18,4 +26,13 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules>
+      <remove name="ApplicationInsightsWebTracking"/>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
+        preCondition="managedHandler"/>
+    </modules>
+  </system.webServer>
+ 
 </configuration>
