--- a/Finalproject_G_4/Web.config
+++ b/Finalproject_G_4/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
   <add name="Drivinglicense" 
-    connectionString="Data Source=DESKTOP-7485JE5\SQLEXPRESS;Initial Catalog=Final4;Integrated Security=True"
+    connectionString="Data Source=DESKTOP-7485JE5\SQLEXPRESS;Initial Catalog=DrivingLicenseDB;Integrated Security=True"
     providerName="System.Data.SqlClient" />
 </connectionStrings>
   <system.web>
