--- a/Finalproject_BL/Finalproject_BL.csproj
+++ b/Finalproject_BL/Finalproject_BL.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Registration\Notice.cs" />
     <Compile Include="Registration\Trainee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registration\User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
